--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,10 +1,34 @@
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+html {
+  font-size: 21px;
+}
+:root {
+  --light-grey : rgba(65, 64, 64, 0.5);
+  --gray: #414040;
+  --shadow: rgba(0, 0, 0, 0.25);
+  --violet: #5E46F5;
+  --darkViolet: #673ab7;
+  --padding: 1.42rem;
+  --margin: var(--padding);
+  --text-size: 1rem;
+  --h4-size: 1rem;
+  --h3-size: 1.14rem;
+  --h2-size: 1.33rem;
+  --h1-size: 1.74rem;
+  --border-radius: 0.95rem;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 1.4;
 }
 
 code {
