--- a/app/src/components/App.css
+++ b/app/src/components/App.css
@@ -8,6 +8,7 @@
   margin: 0 auto;
   padding: 0 var(--padding);
   color: var(--gray);
+  min-height: 100vh;
 }
 
 .poll-list {
@@ -45,17 +46,51 @@
 }
 
 .user-image {
-  flex-basis: calc(7% - var(--padding));
+  flex-basis: calc(25% - var(--padding));
   padding-right: var(--padding);
+  text-align: center;
 }
 .poll-info {
-  flex-basis: calc(73% - var(--padding));
+  flex-basis: calc(75% - var(--padding));
   padding-left: var(--padding);
   border-left: 1px solid var(--light-grey);
 }
 .poll-info h4 {
   margin: 0;
   font-size: var(--h3-size);
+}
+.selected {
+  background: var(--violet);
+  color: white;
+  padding: 1rem;
+  border-radius: var(--border-radius);
+  margin: var(--margin) 0;
+}
+.selected p {
+  margin: 0;
+}
+.percentage {
+  background: var(--violet);
+  height: 2rem;
+  width: 100%;
+  margin: var(--margin) 0;
+  border-radius: var(--border-radius);
+  position: relative;
+}
+.selected .percentage {
+  background: white;
+}
+.votes {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.50);
+  border-top-left-radius: var(--border-radius);
+  border-bottom-left-radius: var(--border-radius);
+}
+.selected .votes {
+  background: rgba(94, 69, 245, 0.50);
 }
 .btn {
   width: auto;
@@ -74,9 +109,37 @@
   background-color: var(--darkViolet);
 }
 
-.poll-option {
+.input_group {
   margin: 0.5rem 0;
 }
-.poll-option:last-of-type {
+.input_group:last-of-type {
   margin-bottom: 1rem;
+}
+.input_text {
+  width: 100%;
+  border-radius: var(--border-radius);
+  padding: 0.5rem;
+  border: 1px solid var(--violet);
+  font-size: var(--text-size);
+  text-align: center;
+  outline: 0;
+}
+.input_text:focus {
+  border-width: 2px;
+}
+.login {
+  width: 70%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0 auto;
+  min-height: 100vh;
+}
+.login form {
+  width: 100%;
+}
+
+.login .btn {
+  width: 100%;
 }
