--- a/app/src/index.css
+++ b/app/src/index.css
@@ -8,7 +8,7 @@ html {
 }
 :root {
   --light-grey : rgba(65, 64, 64, 0.5);
-  --gray: #414040;
+  --gray: #5a5959;
   --shadow: rgba(0, 0, 0, 0.25);
   --violet: #5E46F5;
   --darkViolet: #673ab7;
@@ -29,6 +29,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.4;
+  color: var(--gray);
 }
 
 code {
