added styles, clean logs, and removed authedUser

--- a/app/src/components/App.css
+++ b/app/src/components/App.css
@@ -39,12 +39,16 @@ header, .nav ul {
   font-weight: 600;
   color: var(--violet);
 }
+
+.toggle-heading span {
+  cursor: pointer;
+}
 .poll-list .notice {
   font-weight: 600;
   color: var(--darkViolet);
   margin: 0;
 }
-.poll-list {
+.poll-list, .leader-list {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -64,7 +68,6 @@ header, .nav ul {
     /* width: calc(50% - var(--margin)); */
   }
 }
-
 .poll-container {
   box-shadow: 0px 4px 4px var(--shadow);
   padding: var(--padding);
@@ -85,13 +88,54 @@ header, .nav ul {
 .leader-container {
   box-shadow: 0px 4px 4px var(--shadow);
   border-radius: var(--border-radius);
+  width: 100%;
+  margin-bottom: var(--margin);
+}
+.leader-list .poll-container {
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  position: relative;
+}
+.leader-list .position {
+  background: var(--violet);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 8rem;
+  height: 100%;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  border-top-left-radius: var(--border-radius);
+  border-bottom-left-radius: var(--border-radius);
+}
+.leader-list .content {
+  margin-left: 8.5rem;
+  width: 60%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.leader-list .score {
+  width: 25%;
+  background: var(--violet);
+  color: #ffffff;
+  padding: var(--padding);
+  border-radius: var(--border-radius);
+  text-align: center;
+  font-size: 3rem;
+}
+.score h3 {
+  font-size: var(--h2-size);
 }
 .user-image {
   flex-basis: calc(25% - var(--padding));
   padding-right: var(--padding);
   text-align: center;
 }
-
 .user {
   text-align: right;
 }
