--- a/app/src/components/App.css
+++ b/app/src/components/App.css
@@ -1,255 +1,276 @@
-.App {
-  text-align: center;
+h1 {
+  font-size: var(--h1-size);
 }
-
-.container {
-  max-width: 1080px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 var(--padding);
+ul {
+  list-style: none;
+  padding: 0;
+  margin:0.5rem 0;
+}
+a {
+  text-decoration: none;
   color: var(--gray);
-  min-height: 100vh;
+}
+a:hover {
+  color: var(--darkViolet);
+}
+.active {
+  font-weight: bold;
+  color: var(--violet);
 }
 img {
   max-width: 100%;
 }
-h1 {
-  color: var(--violet);
-}
-header, .nav ul {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.nav ul {
-  list-style: none;
-  padding: 0;
-}
-.nav a {
-  text-decoration: none;
-  color: var(--gray);
-}
-.nav li {
-  margin-left: 1.2rem;
-}
-.nav li:first-of-type {
-  margin-left: 0;
-}
-.active, a.active {
-  font-weight: 600;
-  color: var(--violet);
-}
-
-.toggle-heading span {
+.btn {
+  background: var(--violet);
+  padding: 0.7rem 3rem;
+  border-radius: var(--border-radius);
+  color: white;
+  transition: 0.4s ease;
+  font-size: var(--text-size);
+  border: 0;
+  margin: 1rem 0;
   cursor: pointer;
 }
-.poll-list .notice {
-  font-weight: 600;
-  color: var(--darkViolet);
-  margin: 0;
+.btn.submit {
+  width: 100%;
 }
-.poll-list, .leader-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+.btn:hover {
+  background: var(--darkViolet);
+  color: white;
+}
+.container {
+  padding: 1rem 2rem;
+}
+header {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
-}
-.poll-list li, .new-question-form {
-  margin: var(--margin);
-  max-width: 34.5rem;
-  width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .poll-list li {
-    margin: var(--margin) auto;
-    /* width: calc(50% - var(--margin)); */
-  }
-}
-.poll-container {
-  box-shadow: 0px 4px 4px var(--shadow);
-  padding: var(--padding);
-  border-radius: var(--padding);
-  display: flex;
-  justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
+  border-bottom: 1px solid var(--shadow)
 }
-.poll-container h3 {
-  flex-basis: 100%;
-  margin-top: 0;
-  margin-bottom: var(--margin);
-}
-.leader-list .poll-container {
-  box-shadow: none;
-}
-.leader-container {
-  box-shadow: 0px 4px 4px var(--shadow);
-  border-radius: var(--border-radius);
+header .nav {
   width: 100%;
-  margin-bottom: var(--margin);
 }
-.leader-list .poll-container {
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: stretch;
-  position: relative;
+@media screen and (min-width: 768px) {
+  header .nav {
+    width: 50%;
+  }
+  header .nav:first-child ul {
+    justify-content: flex-start;
+  }
+  header .nav:last-child ul {
+    justify-content: flex-end;
+  }
 }
-.leader-list .position {
-  background: var(--violet);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 8rem;
-  height: 100%;
-  color: #ffffff;
+header ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 3rem;
-  border-top-left-radius: var(--border-radius);
-  border-bottom-left-radius: var(--border-radius);
 }
-.leader-list .content {
-  margin-left: 8.5rem;
-  width: 60%;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
-.leader-list .score {
-  width: 25%;
-  background: var(--violet);
-  color: #ffffff;
-  padding: var(--padding);
-  border-radius: var(--border-radius);
-  text-align: center;
-  font-size: 3rem;
-}
-.score h3 {
-  font-size: var(--h2-size);
-}
-.user-image {
-  flex-basis: calc(25% - var(--padding));
-  padding-right: var(--padding);
-  text-align: center;
+
+.nav li:not(:first-of-type) {
+  margin-left: 1rem;
 }
 .user {
-  text-align: right;
+  display: flex;
+  align-items: center;;
 }
 .user .user-image {
-  display: inline-block;
-  max-width: 25%;
-  vertical-align: middle;
-  padding-right: 1rem;
+  max-width: 50px;
+  padding-right: 10px;
 }
-.user .user-name {
-  display: inline;
-
-}
-.poll-info {
-  flex-basis: calc(75% - var(--padding));
-  padding-left: var(--padding);
-  border-left: 1px solid var(--light-grey);
-}
-.poll-info h4 {
-  margin: 0;
-  font-size: var(--h3-size);
-}
-.selected {
-  background: var(--violet);
-  color: white;
-  padding: 1rem;
-  border-radius: var(--border-radius);
-  margin: var(--margin) 0;
-}
-.selected p {
-  margin: 0;
-}
-.percentage {
-  background: var(--violet);
-  height: 2rem;
-  width: 100%;
-  margin: var(--margin) 0;
-  border-radius: var(--border-radius);
-  position: relative;
-}
-.selected .percentage {
-  background: white;
-}
-.votes {
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: rgba(255, 255, 255, 0.50);
-  border-top-left-radius: var(--border-radius);
-  border-bottom-left-radius: var(--border-radius);
-}
-.selected .votes {
-  background: rgba(94, 69, 245, 0.50);
-}
-.btn {
-  width: auto;
-  flex-basis: auto;
-  border: 0;
-  padding: 0.5rem var(--padding);
-  font-size: var(--text-size);
-  background-color: var(--violet);
-  color: #ffffff;
-  border-radius: var(--border-radius);
-  transition: background-color 0.3s;
-  cursor: pointer;
-}
-a.btn {
-  color: #ffffff;
-}
-.btn:hover {
-  background-color: var(--darkViolet);
-}
-.new-question-form {
-  margin: calc(var(--margin) * 2) auto;
+.login {
   text-align: center;
-} 
-.input_group {
-  margin: 1.2rem 0;
+  min-height: 100vh;
+  min-width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.input_group:last-of-type {
-  margin-bottom: 1.2rem;
+
+.login h2 {
+  font-weight: 400;
 }
-.new-question-form legend {
-  font-size: var(--h2-size);
-}
-.new-question-form .submit {
+form {
   width: 100%;
+  padding: 0 var(--margin);
+}
+.input_group {
+  margin: 0.5rem 0;
 }
 .input_text {
   width: 100%;
+  padding: 0.7rem;
   border-radius: var(--border-radius);
-  padding: 0.5rem;
-  border: 1px solid var(--violet);
+  border: 1px solid var(--darkViolet);
   font-size: var(--text-size);
-  text-align: center;
-  outline: 0;
 }
-.input_text:focus {
-  border-width: 2px;
-}
-.login {
-  width: 70%;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  margin: 0 auto;
-  min-height: 100vh;
-}
-.login form {
-  width: 100%;
+.input_radio {
+  position: absolute;
+  left: -999999999px;
 }
 
-.login .btn {
-  width: 100%;
+label:before {
+  content: '';
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  border: 2px solid var(--violet);
+  border-radius: 5px;
+}
+
+.input_radio:checked + label:before {
+  background: var(--violet);
+}
+
+legend {
+  font-size: var(--h2-size);
+}
+/* Poll container */
+
+.poll-container {
+  box-shadow: 0px 4px 4px var(--shadow);
+  border-radius: var(--border-radius);
+  padding: var(--padding);
+  margin: var(--margin) 0;
+  text-align: center;
+}
+
+.option-container.selected {
+  background: var(--violet);
+  color: #ffffff;
+  padding: var(--padding);
+  border-radius: var(--border-radius);
+  margin-bottom: var(--margin);
+}
+.option-container.selected p:first-of-type {
+  margin-top: 0;
+}
+.option-container.selected p:last-of-type {
+  margin-bottom: 0;
+}
+.poll-options-title {
+  font-weight: 600;
+}
+.percentage {
+  background: #ffffff;
+  border: 1px solid var(--violet);
+  height: 2rem;
+  border-radius: var(--border-radius);
+}
+.selected .votes {
+  background: var(--violet);
+  opacity: 0.6;
+  height: 100%;
+  display: inline-block;
+}
+@media screen and (min-width: 768px) {
+  .poll-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    text-align: left;
+    max-width: 39rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .user-name {
+    width: 100%;
+  }
+  .user-image:not(.user .user-image) {
+    padding-right: 2rem;
+    border-right: 1px solid var(--shadow);
+  }
+  .poll-info {
+    padding-left: 2rem;
+    width: 80%;
+  }
+}
+
+/* new question */
+
+.new-question-form {
+  max-width: 39rem;
+  margin: 2rem auto var(--margin);
+  text-align: center;
+}
+
+.new-question-form .input_group:not(:last-of-type) {
+  margin: 1rem 0;
+}
+.new-question-form .input_text {
+  text-align: center;
+}
+
+
+/* leader board */
+
+.leader-container {
+  box-shadow: 0px 4px 4px var(--shadow);
+  padding: var(--padding);
+  margin: var(--margin) 0;
+  border-radius: var(--border-radius);
+  text-align: center;
+  position: relative;
+}
+
+.position {
+  background: var(--violet);
+  width: 4rem;
+  height: 4rem;
+  margin: 0 auto;
+  line-height: 4rem;
+  color: #ffffff;
+  font-size: var(--h1-size);
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-top-left-radius: var(--border-radius);
+  border-bottom-right-radius: var(--border-radius);
+}
+
+.score {
+  background: var(--violet);
+  border-radius: var(--border-radius);
+  color: #ffffff;
+  padding: var(--padding);
+}
+
+.score h3 {
+  margin: 0;
+}
+
+.score span {
+  font-size: 3rem;
+}
+
+@media screen and (min-width: 768px) {
+  .leader-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .leader-container h3 {
+    width: 100%;
+    margin-top: 0;
+  }
+  .leader-container .content {
+    width: 70%;
+    text-align: left;
+    margin-left: 4.5rem;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .leader-container .user-image {
+    width: 20%;
+  }
+  .leader-container .leader-info {
+    width: 65%;
+  }
+  .score {
+    width: 20%;
+  }
 }
